<resources>
    <string name="app_name">Mindera News</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="create_news">CREATE NEWS</string>
    <string name="create_event">CREATE EVENT</string>
    <string name="textview">TextView</string>
    <string name="add_image">Add Image</string>
    <string name="image">image\n</string>
    <string name="description">description</string>
    <string name="description_hint">"description "</string>
    <string name="submit">submit</string>
    <string name="create_events">CREATE EVENTS</string>
    <string name="date">Date:</string>
    <string name="select_date">Select Date</string>
    <string name="location">Location:</string>
    <string name="enter_location">Enter Location</string>
    <string name="time">Time:</string>
    <string name="enter_time">Enter Time</string>
    <string name="title_create">Create</string>
    <string name="title_profile">Profile</string>
</resources>