<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.minderanews.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.minderanews.ui.profile.ProfileFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.minderanews.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/createAccount"
        android:name="com.minderanews.ui.account.CreateAccount"
        android:label="fragment_create_account"
        tools:layout="@layout/fragment_create_account" />
    <fragment
        android:id="@+id/signInFragment"
        android:name="com.minderanews.ui.signIn.SignInFragment"
        android:label="fragment_sign_in"
        tools:layout="@layout/fragment_sign_in" />

    <fragment
        android:id="@+id/navigation_create"
        android:name="com.minderanews.ui.create.CreateNewAndEvent"
        android:label="@string/title_create"
        tools:layout="@layout/fragment_create_new_and_event" />
</navigation>